--- a/src/devildex/theming/devildex_pydoctor_theme/index.html
+++ b/src/devildex/theming/devildex_pydoctor_theme/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:t="http://twistedmatrix.com/ns/twisted.web.template/0.1">
+<html lang="en" xmlns:t="http://twistedmatrix.com/ns/twisted.web.template/0.1">
 <meta name="pydoctor-template-version" content="3"/>
 
 <t:transparent t:render="head">Head</t:transparent>
