fix sonarqube stuff

--- a/src/devildex/theming/devildex_pydoctor_theme/index.html
+++ b/src/devildex/theming/devildex_pydoctor_theme/index.html
@@ -12,8 +12,8 @@
 <div class="container-fluid mt-4 mb-4">
     <div class="row">
         <div class="col-lg-2 col-md-3">
-            <aside class="sphinxsidebar position-sticky" style="top: 5rem;" role="navigation"
-                   aria-label="Main navigation">
+            <nav class="sphinxsidebar position-sticky" style="top: 5rem;" role="navigation"
+                 aria-label="Main navigation">
                 <div class="devildex-sidebar-wrapper card border-dark">
                     <div class="card-header bg-light text-dark">
                         <h5 class="card-title mb-0">Navigation</h5>
@@ -22,7 +22,7 @@
                         <t:transparent t:render="sidebar"/>
                     </div>
                 </div>
-            </aside>
+            </nav>
         </div>
 
         <div class="col-lg-10 col-md-9">
