--- a/src/devildex/theming/devildex_pydoctor_theme/footer.html
+++ b/src/devildex/theming/devildex_pydoctor_theme/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer mt-auto py-3 bg-dark text-light border-top">
+<footer class="footer mt-auto py-3 bg-dark text-light border-top" id="footer-info">
     <div class="container">
         <div class="row">
             <div class="col-12 text-center">
