--- a/src/devildex/theming/devildex_pydoctor_theme/header.html
+++ b/src/devildex/theming/devildex_pydoctor_theme/header.html
@@ -2,7 +2,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark devildex-top-bar bg-dark sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand d-flex align-items-center" href="index.html">
+            <a class="navbar-brand d-flex align-items-center" id="navbar-brand" href="index.html">
                 <img src="static/imgs/logo-final.png" alt="DevilDex Logo" class="me-2" height="80"/>
                 <span>DevilDex Project</span>
             </a>
