--- a/src/devildex/theming/devildex_pydoctor_theme/index.html
+++ b/src/devildex/theming/devildex_pydoctor_theme/index.html
@@ -14,7 +14,7 @@
         <div class="col-lg-2 col-md-3">
             <nav class="sphinxsidebar position-sticky" style="top: 5rem;" role="navigation"
                  aria-label="Main navigation">
-                <div class="devildex-sidebar-wrapper card border-dark">
+                <div class="devildex-sidebar-wrapper card border-dark" id="sidebar-nav">
                     <div class="card-header bg-light text-dark">
                         <h5 class="card-title mb-0">Navigation</h5>
                     </div>
@@ -25,7 +25,7 @@
             </nav>
         </div>
 
-        <div class="col-lg-10 col-md-9">
+        <div class="col-lg-10 col-md-9" id="main-content">
             <div t:render="subheader"/>
 
             <h2>
